tutoriels/gitops/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver-service
  namespace: echoserver-ns
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: echoserver
